--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
 
 
-    <string name="taheading"> SECTION A: SOCIO - DEMOGRAPHIC INFORMATION </string>
-    <string name="tbheading"> SECTION B: PARTICIPANT INFORMATION </string>
-
-
     <string name="tdheading"> SECTION D: HOUSEHOLD MEMBER’S INFORMATION </string>
     <string name="teheading"> SECTION E: REPRODUCTIVE HEALTH (Complete this table for all married women aged 15 &#8211; 49 years in the household) </string>
     <string name="te2heading"> MATERNAL MORTALITY STATUS </string>
@@ -1122,6 +1118,7 @@
     <string name="childlistinfo">اندراج شدہ بچوں کی فہرست</string>
 
 
+    <string name="taheading"> SECTION A: SOCIO - DEMOGRAPHIC INFORMATION </string>
     <string name="a1">Name of Taluka</string>
     <string name="a2">Name of Union Council</string>
     <string name="a3">Name of Village</string>
@@ -1155,6 +1152,7 @@
 
     <!--  Section B  !-->
 
+    <string name="tbheading"> SECTION B: PARTICIPANT INFORMATION </string>
     <string name="sno">Serial No.</string>
     <string name="a">Complete Name</string>
     <string name="b">Age in years</string>
@@ -1189,6 +1187,29 @@
     <string name="i13">Student</string>
     <string name="i14">None</string>
     <string name="i96">Others(Specify)</string>
+
+    <string name='Q_a'>a</string>
+    <string name='Q_a1'>a1</string>
+    <string name='Q_a10'>a10</string>
+    <string name='Q_a11'>a11</string>
+    <string name='Q_a12'>a12</string>
+    <string name='Q_a2'>a2</string>
+    <string name='Q_a3'>a3</string>
+    <string name='Q_a4'>a4</string>
+    <string name='Q_a5'>a5</string>
+    <string name='Q_a6'>a6</string>
+    <string name='Q_a7'>a7</string>
+    <string name='Q_a8'>a8</string>
+    <string name='Q_a9'>a9</string>
+    <string name='Q_b'>b</string>
+    <string name='Q_c'>c</string>
+    <string name='Q_d'>d</string>
+    <string name='Q_e'>e</string>
+    <string name='Q_f'>f</string>
+    <string name='Q_g'>g</string>
+    <string name='Q_h'>h</string>
+    <string name='Q_i'>i</string>
+    <string name='Q_sno'>sno</string>
 
 
 </resources>
