--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -839,7 +839,7 @@
     <string name="im26d"> OTHER COMMENTS IF ANY </string>
 
 
-    <string name="end_interview"> انٹرویو ختم کریں </string>
+    <string name="end_interview"> End </string>
     <string name="start_interview"> انٹرویو شروع کریں </string>
     <string name="nextSection"> اگلا سیکشن </string>
     <string name="nextPregnancy"> Next Pregnancy </string>
