--- a/app/src/main/res/values-sd-rPK/strings.xml
+++ b/app/src/main/res/values-sd-rPK/strings.xml
@@ -39,7 +39,7 @@
     <string name="splashText2">"Empowerment and Care  Strategies  to Address Health and Survival"</string>
 
     <string name="sM">"Centre of Excellence Women &amp; Child Health"</string>
-    <string name="no"> نہیں </string>
+    <string name="no">نه</string>
     <string name="dkn"> معلوم نہیں </string>
     <string name="none"> کوئی نہیں </string>
     <string name="never"> کبھی نہیں </string>
@@ -849,13 +849,22 @@
     <string name="nextPregnancy"> Next Pregnancy </string>
     <string name="nextMortality"> Next Mortality </string>
 
+
+    <string name="istatus"> سيشن جو انٽريو اسٽيٽس : </string>
+    <string name="istatusa"> سيشن مڪمل ٿيو </string>
+    <string name="istatusb"> سيشن مڪمل نه ٿيو </string>
+    <string name="istatusc"> سيشن کان انڪار ڪري ڇڏيو </string>
+    <string name="istatus96"> ٻيو ڪجهه </string>
+    <string name="istatus96x"> ٻيو ڪجهه </string>
+
+
     <string name="dialog_text"> Surely! You Want To Exit this Child Module? </string>
     <string name="countNo"> نہیں </string>
     <string name="countYes"> جی ہاں </string>
     <string name="countAlertMsg"> یقینا! آپ جاری رکھنا چاہتے ہیں </string>
     <string name="splashText1">" Coverage Evaluation Survey, Pakistan, 2020 "</string>
     <string name="title_activity_family_members_list">" Family Members List "</string>
-    <string name="yes">" ہاں "</string>
+    <string name="yes">ها</string>
     <string name="ss18g_title">Finished Floor</string>
     <string name="ss18l">Bricks</string>
     <string name="ss18m">Lime</string>
@@ -1127,6 +1136,8 @@
     <string name="a3">ڳوٺ جو نالو</string>
     <string name="a4">ايڊريس </string>
     <string name="a5">سيشن جي تاريخ</string>
+    <string name="a51">سيشن جي شروع ٿيڻ جو ٽائيم</string>
+    <string name="a52">سيشن جي ختم ٿيڻ جو ٽائيم</string>
     <string name="a6">معلومات حاصل ڪندڙ جو نالو </string>
     <string name="a7"> ٽيم ليڊر جو نالو</string>
     <string name="a8"> سيشن ۾ شرڪت ڪندڙن جومڪمل  تعداد</string>
@@ -1137,6 +1148,7 @@
     <string name="a1102">ماءَ،نئون ڄاول ٻار، ٻار  ۽ نوجوان ڇوڪرين جي صحت</string>
     <string name="a1103">پيڊز جي پروڊڪشن/ٺاهڻ  متعلق</string>
     <string name="a1104">پيئڻ واري پاڻيءَ کي محفوظ ڪرڻ متعلق</string>
+    <string name="a1105">ڪووڊ 19</string>
     <string name="a12">سيشن ۾ ڪهڙن موضوعن تي ڳالهه ٻولهه ڪئي وئي</string>
     <string name="a1201">حمل کان پهريان سارسنڀال</string>
     <string name="a1202">اسپتال ۾ ويم</string>
@@ -1151,7 +1163,7 @@
     <string name="a1211">نئين ڄاول ٻار جي سارسنڀال ڪرڻ ، دست ، وڏو بخار ۽ خوراڪ جي گهٽتائي</string>
     <string name="a1212">ماءُ جي غذا</string>
     <string name="a1213">منتقل ڪيو/ موڪليو ويو</string>
-
+    <string name="a13">ڇا توهان کي پيڊ جي لاءِ ڪپڙو مليو آهي؟</string>
 
     <!-- Section B  !-->
 
@@ -1196,10 +1208,13 @@
     <string name='Q_a10'>a10</string>
     <string name='Q_a11'>a11</string>
     <string name='Q_a12'>a12</string>
+    <string name='Q_a13'>a13</string>
     <string name='Q_a2'>a2</string>
     <string name='Q_a3'>a3</string>
     <string name='Q_a4'>a4</string>
     <string name='Q_a5'>a5</string>
+    <string name='Q_a51'>a51</string>
+    <string name='Q_a52'>a52</string>
     <string name='Q_a6'>a6</string>
     <string name='Q_a7'>a7</string>
     <string name='Q_a8'>a8</string>
