--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="splashText2">"Empowerment and Care  Strategies  to Address Health and Survival"</string>
 
     <string name="sM">"Centre of Excellence Women &amp; Child Health"</string>
-    <string name="no"> نہیں </string>
+    <string name="no">No</string>
     <string name="dkn"> معلوم نہیں </string>
     <string name="none"> کوئی نہیں </string>
     <string name="never"> کبھی نہیں </string>
@@ -74,14 +74,10 @@
     <string name="nextPregnancy"> Next Pregnancy </string>
     <string name="nextMortality"> Next Mortality </string>
 
-    <string name="istatus"> گھرانے کے انٹرویو کا نتیجہ: </string>
-    <string name="istatush"> نوٹ: نامکمل انٹرویو کے کسی بھی نتیجہ کی صورت میں سپروائزر سے رابطہ کریں </string>
+    <string name="istatus"> سيشن جو انٽريو اسٽيٽس : </string>
     <string name="istatusa"> مکمل </string>
     <string name="istatusb"> گھرانے کا کوئی فرد یا سمجھدار جواب دہندہ گھر پر موجود نہیں </string>
     <string name="istatusc"> گھرانے کے تمام افراد لمبے عرصے کے لیے گھر سے غیر حاضر تھے </string>
-    <string name="istatusd"> انکار کردیا </string>
-    <string name="istatuse"> خالی گھر / غیر رہائشی </string>
-    <string name="istatusf"> گھر نہیں ملا </string>
     <string name="istatus96"> دیگر </string>
     <string name="istatus96x"> وضاحت کریں </string>
 
@@ -91,13 +87,15 @@
     <string name="countAlertMsg"> یقینا! آپ جاری رکھنا چاہتے ہیں </string>
     <string name="splashText1">" Coverage Evaluation Survey, Pakistan, 2020 "</string>
     <string name="title_activity_family_members_list">" Family Members List "</string>
-    <string name="yes">" ہاں "</string>
+    <string name="yes">Yes</string>
     <string name="taheading"> SECTION A: SOCIO - DEMOGRAPHIC INFORMATION </string>
     <string name="a1">Name of Taluka</string>
     <string name="a2">Name of Union Council</string>
     <string name="a3">Name of Village</string>
     <string name="a4">Address</string>
     <string name="a5">Session’s Date</string>
+    <string name="a51">Session start time </string>
+    <string name="a52">Session end time </string>
     <string name="a6">Name of Data Collector</string>
     <string name="a7">Name of Team Leader</string>
     <string name="a8">Total number of participants in session</string>
@@ -108,6 +106,7 @@
     <string name="a1102">Maternal, Neonatal, Child and Adolescent Health</string>
     <string name="a1103">MHM Pad Production</string>
     <string name="a1104">Safe Drinking Water</string>
+    <string name="a1105">COVID -19</string>
     <string name="a12">Which topics are covered in the Session?</string>
     <string name="a1201">Preconception care</string>
     <string name="a1202">Facility-based delivery</string>
@@ -122,6 +121,7 @@
     <string name="a1211">New born child health care, Diarrhea, typhoid, malnutrition</string>
     <string name="a1212">Maternal Nutrition</string>
     <string name="a1213">Referral</string>
+    <string name="a13">Have you received Pad Cloth?</string>
 
 
     <!--  Section B  !-->
@@ -167,10 +167,13 @@
     <string name='Q_a10'>a10</string>
     <string name='Q_a11'>a11</string>
     <string name='Q_a12'>a12</string>
+    <string name='Q_a13'>a13</string>
     <string name='Q_a2'>a2</string>
     <string name='Q_a3'>a3</string>
     <string name='Q_a4'>a4</string>
     <string name='Q_a5'>a5</string>
+    <string name='Q_a51'>a51</string>
+    <string name='Q_a52'>a52</string>
     <string name='Q_a6'>a6</string>
     <string name='Q_a7'>a7</string>
     <string name='Q_a8'>a8</string>
