--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,7 +140,7 @@
     <string name="c1">مرد</string>
     <string name="c2">عورت</string>
     <string name="d">رابطي جو نمبر</string>
-    <string name="e">تعليم</string>
+    <string name="e"> تعليم (اڻ پڙهيل-0) (مذهبي تعليم-97) </string>
     <string name="f">ازواد جي حيثيت</string>
     <string name="f1">غير شادي شده</string>
     <string name="f2">شادي شده</string>
