--- a/app/src/main/res/values-sd-rPK/strings.xml
+++ b/app/src/main/res/values-sd-rPK/strings.xml
@@ -21,6 +21,7 @@
     <string name="main_menu">Main Menu</string>
     <string name="only_for_testing">ONLY FOR TESTING</string>
     <string name="database">Database</string>
+    <string name="search">Search</string>
 
 
     <string name="taheading"> SECTION A: SOCIO - DEMOGRAPHIC INFORMATION </string>
